# voxelotl-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Frameworks/SDL3.xcframework/: Info.plist
Frameworks/SDL3.xcframework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
Frameworks/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3  default.metallib
Frameworks/SDL3.xcframework/ios-arm64/SDL3.framework/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3  default.metallib
Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/: SDL3
Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/Resources/: Info.plist  default.metallib
Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/tvos-arm64/SDL3.framework/: Info.plist  SDL3  default.metallib
Frameworks/SDL3.xcframework/tvos-arm64/SDL3.framework/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3  default.metallib
Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Scripts/: generate-sdl3-shim.sh
Sources/SDLSwift/: CMakeLists.txt  module.modulemap  shim.h
Sources/Voxelotl/: Application.swift  CMakeLists.txt  Camera.swift  Chunk.swift  ChunkGeneration.swift  ChunkID.swift  ChunkMeshBuilder.swift  ChunkMeshGeneration.swift  Color.swift  CubeMeshBuilder.swift  FPSCalculator.swift  FloatExtensions.swift  Game.swift  GameController.swift  GameDelegate.swift  Info.plist.in  Keyboard.swift  Matrix4x4.swift  Player.swift  Program.swift  Random.swift  Raycast.swift  Rectangle.swift  Renderer.swift  SpriteTestGame.swift  Voxelotl.entitlements  Voxelotl.icns  World.swift  WorldGenerator.swift  main.m  main.swift  module.modulemap  shader.metal  shader2D.metal  shadertypes.h
Sources/Voxelotl/Assets.xcassets/AppIcon.appiconset/: Contents.json
Sources/Voxelotl/Assets.xcassets/AppIconMobile.appiconset/: Contents.json
Sources/Voxelotl/Common/: Color.swift  ConcurrentDictionary.swift
Sources/Voxelotl/Generator/: StandardWorldGenerator.swift  TerrorTowerGenerator.swift  WorldGenerator.swift
Sources/Voxelotl/Input/: GameController.swift  Keyboard.swift  Mouse.swift
Sources/Voxelotl/Math/: AABB.swift  Extent.swift  FloatExtensions.swift  IntegerExtensions.swift  Matrix4x4.swift  Point.swift  Rectangle.swift  Size.swift  VectorExtensions.swift
Sources/Voxelotl/Noise/: CoherentNoise.swift  LayeredNoise.swift  PerlinNoiseGenerator.swift  SimplexNoise.swift
Sources/Voxelotl/Random/: Arc4Random.swift  DarwinRandom.swift  PCG32Random.swift  PerlinNoiseGenerator.swift  RandomCollectionExtensions.swift  RandomProvider.swift  RandomRange.swift  SimplexNoise.swift  SplitMix64.swift  Xoroshiro128.swift
Sources/Voxelotl/Renderer/: BlendFunc.swift  BlendMode.swift  ChunkRenderer.swift  Environment.swift  Material.swift  Mesh.swift  ModelBatch.swift  Renderer.swift  RendererError.swift  Sprite.swift  SpriteBatch.swift
Sources/Voxelotl/Renderer/Metal/: BlendFuncExtension.swift  ColorExtension.swift  EnvironmentExtension.swift  PipelineOptions.swift  RendererDynamicMesh.swift  RendererMesh.swift  RendererTexture2D.swift  Shader.swift
Sources/Voxelotl/Resource/: NSImageLoader.swift
cmake/toolchains/: ios.toolchain.cmake
xcode-cloud/ci_scripts/: ci_post_clone.sh
